chore(release):Publish
 - @uqds/accordion@7.0.0-alpha.0
 - @uqds/alert@7.0.0-alpha.0
 - @uqds/breadcrumb@8.0.1-alpha.0
 - @uqds/card@4.0.0-alpha.0
 - @uqds/footer@7.0.1-alpha.0
 - @uqds/form@4.0.0-alpha.0
 - @uqds/grid-menu@4.0.0-alpha.0
 - @uqds/header@7.0.0-alpha.0
 - @uqds/header-legacy@4.0.0-alpha.0
 - @uqds/icon@4.0.0-alpha.0
 - @uqds/loading-spinner@4.0.0-alpha.0
 - @uqds/navigation@7.0.0-alpha.0
 - @uqds/previous-next@4.0.0-alpha.0
 - @uqds/react@2.0.1-alpha.0
 - @uqds/side-nav@4.0.0-alpha.0
 - @uqds/site-header@7.0.0-alpha.0
 - storybook-html@8.0.0-alpha.1
 - storybook-react@2.0.1-alpha.0
 - uqds-builder@4.0.1-alpha.1

--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/alert",
-  "version": "6.0.0",
+  "version": "7.0.0-alpha.0",
   "description": "Alert component",
   "keywords": [
     "uqds",
@@ -54,7 +54,7 @@
   "dependencies": {
     "@uqds/core": "^4.0.0",
     "@uqds/grid": "^3.0.0",
-    "@uqds/icon": "^3.0.0"
+    "@uqds/icon": "^4.0.0-alpha.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
