--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "6.0.0",
+  "version": "7.0.0-alpha.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^3.0.0"
+    "@uqds/icon": "^4.0.0-alpha.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
