--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^3.0.0",
+    "@uqds/icon": "^4.0.0-alpha.0",
     "@uqds/layout": "^6.0.0"
   }
 }
