--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -54,6 +54,6 @@
   },
   "dependencies": {
     "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^3.0.0"
+    "@uqds/icon": "^4.0.0-alpha.0"
   }
 }
