--- a/packages/header-legacy/package.json
+++ b/packages/header-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header-legacy",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Header component",
   "private": true,
   "keywords": [
@@ -37,6 +37,6 @@
   "dependencies": {
     "@uqds/core": "^4.0.0",
     "@uqds/grid": "^3.0.0",
-    "@uqds/icon": "^3.0.0"
+    "@uqds/icon": "^4.0.0-alpha.0"
   }
 }
