--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -37,6 +37,7 @@
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
     "@uqds/accordion": "^7.0.0-alpha.0",
+    "@uqds/acknowledgement": "^0.1.0",
     "@uqds/alert": "^7.0.0-alpha.0",
     "@uqds/app-maps": "^3.0.0",
     "@uqds/blockquote": "^5.0.0",
