chore: Move SASS imports into a single file, and tree-shake it
This should avoid duplication of class names between components that import
the same upstream .scss files.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -70,7 +70,8 @@
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
     "@uqds/table": "^4.0.0",
-    "classnames": "^2.5.1"
+    "classnames": "^2.5.1",
+    "vite-plugin-purgecss": "^0.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
