chore(release):Publish
 - @uqds/accordion@7.0.0
 - @uqds/alert@7.0.0
 - @uqds/breadcrumb@8.0.1
 - @uqds/card@4.0.0
 - @uqds/footer@7.0.1
 - @uqds/form@4.0.0
 - @uqds/grid-menu@4.0.0
 - @uqds/header@7.0.0
 - @uqds/header-legacy@4.0.0
 - @uqds/icon@4.0.0
 - @uqds/loading-spinner@4.0.0
 - @uqds/navigation@7.0.0
 - @uqds/previous-next@4.0.0
 - @uqds/react@2.0.1
 - @uqds/sections@4.0.0
 - @uqds/side-nav@4.0.0
 - @uqds/site-header@7.0.0
 - storybook-html@8.0.0
 - storybook-react@2.0.1
 - uqds-builder@4.0.1

--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "8.0.1-alpha.0",
+  "version": "8.0.1",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
@@ -52,6 +52,6 @@
   },
   "dependencies": {
     "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^4.0.0-alpha.0"
+    "@uqds/icon": "^4.0.0"
   }
 }
