--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/image",
-  "version": "5.0.0",
+  "version": "6.0.0-alpha.0",
   "description": "Image components",
   "keywords": [
     "uqds",
