--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.0.0",
+  "version": "8.0.1-alpha.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -36,7 +36,7 @@
     "@storybook/manager-api": "^8.5.2",
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
-    "@uqds/accordion": "^7.0.0",
+    "@uqds/accordion": "^7.0.1-alpha.0",
     "@uqds/alert": "^7.0.0",
     "@uqds/app-maps": "^3.0.0",
     "@uqds/blockquote": "^5.0.0",
@@ -45,7 +45,7 @@
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^4.0.0",
     "@uqds/core": "^4.0.0",
-    "@uqds/footer": "^7.0.1",
+    "@uqds/footer": "^7.0.2-alpha.0",
     "@uqds/footer-legacy": "^3.0.0",
     "@uqds/form": "^4.0.0",
     "@uqds/grid": "^3.0.0",
@@ -54,7 +54,7 @@
     "@uqds/header-legacy": "^4.0.0",
     "@uqds/hero": "^6.0.0",
     "@uqds/icon": "^4.0.0",
-    "@uqds/image": "^5.0.0",
+    "@uqds/image": "^6.0.0-alpha.0",
     "@uqds/layout": "^6.0.0",
     "@uqds/lists": "^3.0.0",
     "@uqds/loading-spinner": "^4.0.0",
