--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.1",
+  "version": "4.0.2-alpha.0",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -29,7 +29,7 @@
     "gulp": "^5.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^7.0.0",
+    "@uqds/accordion": "^7.0.1-alpha.0",
     "@uqds/alert": "^7.0.0",
     "@uqds/blockquote": "^5.0.0",
     "@uqds/body": "^3.0.0",
@@ -37,7 +37,7 @@
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^4.0.0",
     "@uqds/core": "^4.0.0",
-    "@uqds/footer": "^7.0.1",
+    "@uqds/footer": "^7.0.2-alpha.0",
     "@uqds/footer-legacy": "^3.0.0",
     "@uqds/form": "^4.0.0",
     "@uqds/grid": "^3.0.0",
@@ -46,7 +46,7 @@
     "@uqds/header-legacy": "^4.0.0",
     "@uqds/hero": "^6.0.0",
     "@uqds/icon": "^4.0.0",
-    "@uqds/image": "^5.0.0",
+    "@uqds/image": "^6.0.0-alpha.0",
     "@uqds/layout": "^6.0.0",
     "@uqds/lists": "^3.0.0",
     "@uqds/loading-spinner": "^4.0.0",
