chore(release):Publish
 - @uqds/accordion@7.0.1-alpha.1
 - @uqds/acknowledgement@0.1.1-alpha.0
 - @uqds/alert@7.0.1-alpha.0
 - @uqds/app-maps@4.0.0-alpha.0
 - @uqds/blockquote@6.0.0-alpha.0
 - @uqds/body@4.0.0-alpha.0
 - @uqds/breadcrumb@8.0.2-alpha.0
 - @uqds/button@4.0.0-alpha.0
 - @uqds/card@4.0.1-alpha.0
 - @uqds/core@5.0.0-alpha.0
 - @uqds/footer@7.0.2-alpha.1
 - @uqds/footer-legacy@4.0.0-alpha.0
 - @uqds/form@4.0.1-alpha.0
 - @uqds/grid@4.0.0-alpha.0
 - @uqds/grid-menu@4.0.1-alpha.0
 - @uqds/header@7.0.1-alpha.0
 - @uqds/header-legacy@4.0.1-alpha.0
 - @uqds/hero@7.0.0-alpha.0
 - @uqds/icon@4.0.1-alpha.0
 - @uqds/image@6.0.0-alpha.1
 - @uqds/layout@7.0.0-alpha.0
 - @uqds/lists@4.0.0-alpha.0
 - @uqds/loading-spinner@4.0.1-alpha.0
 - @uqds/navigation@7.0.1-alpha.0
 - @uqds/page-header@4.0.0-alpha.0
 - @uqds/pagination@4.0.1-alpha.0
 - @uqds/pane@4.0.0-alpha.0
 - @uqds/pill@6.0.0-alpha.0
 - @uqds/previous-next@4.0.1-alpha.0
 - @uqds/progression@4.0.0-alpha.0
 - @uqds/react@2.0.2-alpha.0
 - @uqds/sections@4.0.1-alpha.0
 - @uqds/side-nav@4.0.1-alpha.0
 - @uqds/site-header@7.0.1-alpha.0
 - @uqds/social@6.0.0-alpha.0
 - storybook-html@8.0.1-alpha.1
 - storybook-react@2.0.2-alpha.0
 - @uqds/table@4.0.0-alpha.0
 - @uqds/tabs@4.0.0-alpha.0
 - uqds-builder@4.0.2-alpha.1

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/react",
-  "version": "2.0.1",
+  "version": "2.0.2-alpha.0",
   "description": "React components",
   "keywords": [
     "uqds",
@@ -46,13 +46,13 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/body": "^3.0.0",
-    "@uqds/card": "^4.0.0",
-    "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^4.0.0",
+    "@uqds/body": "^4.0.0-alpha.0",
+    "@uqds/card": "^4.0.1-alpha.0",
+    "@uqds/core": "^5.0.0-alpha.0",
+    "@uqds/icon": "^4.0.1-alpha.0",
     "@uqds/layout": "6.0.0-alpha.0",
-    "@uqds/pagination": "^4.0.0",
-    "@uqds/pane": "^3.0.0",
+    "@uqds/pagination": "^4.0.1-alpha.0",
+    "@uqds/pane": "^4.0.0-alpha.0",
     "classnames": "^2.5.1"
   },
   "devDependencies": {
