--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "4.0.0",
+  "version": "4.0.1-alpha.0",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -53,7 +53,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^4.0.0"
+    "@uqds/core": "^5.0.0-alpha.0",
+    "@uqds/icon": "^4.0.1-alpha.0"
   }
 }
