--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Grid CSS",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0"
+    "@uqds/core": "^5.0.0-alpha.0"
   }
 }
