--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/pane",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Pane component",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0",
-    "@uqds/layout": "^6.0.0"
+    "@uqds/core": "^5.0.0-alpha.0",
+    "@uqds/layout": "^7.0.0-alpha.0"
   }
 }
