--- a/packages/previous-next/package.json
+++ b/packages/previous-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/previous-next",
-  "version": "4.0.0",
+  "version": "4.0.1-alpha.0",
   "description": "Previous Next component",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0",
-    "@uqds/icon": "^4.0.0"
+    "@uqds/core": "^5.0.0-alpha.0",
+    "@uqds/icon": "^4.0.1-alpha.0"
   }
 }
