--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -37,7 +37,7 @@
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
     "@uqds/accordion": "^7.0.1-alpha.1",
-    "@uqds/acknowledgement": "^0.1.0",
+    "@uqds/acknowledgement": "^0.1.1-alpha.0",
     "@uqds/alert": "^7.0.1-alpha.0",
     "@uqds/app-maps": "^4.0.0-alpha.0",
     "@uqds/blockquote": "^6.0.0-alpha.0",
