chore(release):Publish
 - @uqds/accordion@7.0.1
 - @uqds/acknowledgement@0.1.1
 - @uqds/alert@7.0.1
 - @uqds/app-maps@4.0.0
 - @uqds/blockquote@6.0.0
 - @uqds/body@4.0.0
 - @uqds/breadcrumb@8.0.2
 - @uqds/button@4.0.0
 - @uqds/card@4.0.1
 - @uqds/core@5.0.0
 - @uqds/footer@7.0.2
 - @uqds/footer-legacy@4.0.0
 - @uqds/form@4.0.1
 - @uqds/grid@4.0.0
 - @uqds/grid-menu@4.0.1
 - @uqds/header@7.0.1
 - @uqds/header-legacy@4.0.1
 - @uqds/hero@7.0.0
 - @uqds/icon@4.0.1
 - @uqds/image@6.0.0
 - @uqds/layout@7.0.0
 - @uqds/lists@4.0.0
 - @uqds/loading-spinner@4.0.1
 - @uqds/navigation@7.0.1
 - @uqds/page-header@4.0.0
 - @uqds/pagination@4.0.1
 - @uqds/pane@4.0.0
 - @uqds/pill@6.0.0
 - @uqds/previous-next@4.0.1
 - @uqds/progression@4.0.0
 - @uqds/react@2.0.2
 - @uqds/sections@4.0.1
 - @uqds/side-nav@4.0.1
 - @uqds/site-header@7.0.1
 - @uqds/social@6.0.0
 - storybook-html@8.0.1
 - storybook-react@2.0.2
 - @uqds/table@4.0.0
 - @uqds/tabs@4.0.0
 - uqds-builder@4.0.2

--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid-menu",
-  "version": "4.0.1-alpha.0",
+  "version": "4.0.1",
   "description": "Grid menu components",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^5.0.0-alpha.0",
-    "@uqds/icon": "^4.0.1-alpha.0"
+    "@uqds/core": "^5.0.0",
+    "@uqds/icon": "^4.0.1"
   }
 }
