--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/app-maps",
-  "version": "4.0.0-alpha.0",
+  "version": "4.0.0",
   "description": "Application stylesheets for UQ Maps",
   "private": true,
   "keywords": [
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@material/circular-progress": "^14.0.0",
-    "@uqds/body": "^4.0.0-alpha.0",
-    "@uqds/core": "^5.0.0-alpha.0"
+    "@uqds/body": "^4.0.0",
+    "@uqds/core": "^5.0.0"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
