--- a/packages/footer-legacy/package.json
+++ b/packages/footer-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer-legacy",
-  "version": "4.0.0-alpha.0",
+  "version": "4.0.0",
   "description": "The UQ footer component package",
   "private": true,
   "keywords": [
@@ -35,7 +35,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^5.0.0-alpha.0",
-    "@uqds/grid": "^4.0.0-alpha.0"
+    "@uqds/core": "^5.0.0",
+    "@uqds/grid": "^4.0.0"
   }
 }
