--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-react",
-  "version": "2.0.2-alpha.0",
+  "version": "2.0.2",
   "description": "Storybook for React instance for uqds component development",
   "private": true,
   "keywords": [],
@@ -17,8 +17,8 @@
     "serve-storybook": "http-server storybook-static -i -p 6007"
   },
   "dependencies": {
-    "@uqds/icon": "^4.0.1-alpha.0",
-    "@uqds/react": "^2.0.2-alpha.0"
+    "@uqds/icon": "^4.0.1",
+    "@uqds/react": "^2.0.2"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.5.2",
