--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.2",
+  "version": "4.0.3-alpha.0",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -43,7 +43,7 @@
     "@uqds/form": "^4.0.1",
     "@uqds/grid": "^4.0.0",
     "@uqds/grid-menu": "^4.0.1",
-    "@uqds/header": "^7.0.1",
+    "@uqds/header": "^7.0.2-alpha.0",
     "@uqds/header-legacy": "^4.0.1",
     "@uqds/hero": "^7.0.0",
     "@uqds/icon": "^4.0.1",
