--- a/packages/navigation/package.json
+++ b/packages/navigation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/navigation",
-  "version": "7.0.1",
+  "version": "7.0.2-alpha.0",
   "description": "Navigation components",
   "keywords": [
     "uqds",
