--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.0.3-alpha.0",
+  "version": "8.0.3",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -59,7 +59,7 @@
     "@uqds/layout": "^7.0.0",
     "@uqds/lists": "^4.0.0",
     "@uqds/loading-spinner": "^4.0.1",
-    "@uqds/navigation": "^7.0.2-alpha.0",
+    "@uqds/navigation": "^7.0.2",
     "@uqds/page-header": "^4.0.0",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
