--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "8.0.2",
+  "version": "8.0.3-alpha.0",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
@@ -52,6 +52,6 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.1"
+    "@uqds/icon": "^4.0.2-alpha.0"
   }
 }
