--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "7.0.2",
+  "version": "7.0.3-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -38,9 +38,9 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/form": "^4.0.1",
+    "@uqds/form": "^4.0.2-alpha.0",
     "@uqds/grid": "^4.0.0",
-    "@uqds/icon": "^4.0.1"
+    "@uqds/icon": "^4.0.2-alpha.0"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
