--- a/packages/previous-next/package.json
+++ b/packages/previous-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/previous-next",
-  "version": "4.0.1",
+  "version": "4.0.2-alpha.0",
   "description": "Previous Next component",
   "keywords": [
     "uqds",
@@ -42,6 +42,6 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.1"
+    "@uqds/icon": "^4.0.2-alpha.0"
   }
 }
