--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.0.3",
+  "version": "8.0.4-alpha.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -36,39 +36,39 @@
     "@storybook/manager-api": "^8.5.2",
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
-    "@uqds/accordion": "^7.0.1",
+    "@uqds/accordion": "^7.0.2-alpha.0",
     "@uqds/acknowledgement": "^0.1.1",
-    "@uqds/alert": "^7.0.2",
+    "@uqds/alert": "^7.0.3-alpha.0",
     "@uqds/app-maps": "^4.0.0",
     "@uqds/blockquote": "^6.0.0",
     "@uqds/body": "^4.0.0",
-    "@uqds/breadcrumb": "^8.0.2",
+    "@uqds/breadcrumb": "^8.0.3-alpha.0",
     "@uqds/button": "^4.0.0",
-    "@uqds/card": "^4.0.1",
+    "@uqds/card": "^4.0.2-alpha.0",
     "@uqds/core": "^5.0.0",
-    "@uqds/footer": "^7.0.2",
+    "@uqds/footer": "^7.0.3-alpha.0",
     "@uqds/footer-legacy": "^4.0.0",
-    "@uqds/form": "^4.0.1",
+    "@uqds/form": "^4.0.2-alpha.0",
     "@uqds/grid": "^4.0.0",
-    "@uqds/grid-menu": "^4.0.1",
-    "@uqds/header": "^7.0.2",
-    "@uqds/header-legacy": "^4.0.1",
+    "@uqds/grid-menu": "^4.0.2-alpha.0",
+    "@uqds/header": "^7.0.3-alpha.0",
+    "@uqds/header-legacy": "^4.0.2-alpha.0",
     "@uqds/hero": "^7.0.0",
-    "@uqds/icon": "^4.0.1",
+    "@uqds/icon": "^4.0.2-alpha.0",
     "@uqds/image": "^6.0.0",
     "@uqds/layout": "^7.0.0",
     "@uqds/lists": "^4.0.0",
-    "@uqds/loading-spinner": "^4.0.1",
-    "@uqds/navigation": "^7.0.2",
+    "@uqds/loading-spinner": "^4.0.2-alpha.0",
+    "@uqds/navigation": "^7.0.3-alpha.0",
     "@uqds/page-header": "^4.0.0",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
     "@uqds/pill": "^6.0.0",
-    "@uqds/previous-next": "^4.0.1",
+    "@uqds/previous-next": "^4.0.2-alpha.0",
     "@uqds/progression": "^4.0.0",
     "@uqds/sections": "^4.0.1",
-    "@uqds/side-nav": "^4.0.1",
-    "@uqds/site-header": "^7.0.1",
+    "@uqds/side-nav": "^4.0.2-alpha.0",
+    "@uqds/site-header": "^7.0.2-alpha.0",
     "@uqds/social": "^6.0.0",
     "@uqds/table": "^4.0.0",
     "@uqds/tabs": "^4.0.0",
