chore(release):Publish
 - @uqds/accordion@7.0.2
 - @uqds/alert@7.0.3
 - @uqds/breadcrumb@8.0.3
 - @uqds/card@4.0.2
 - @uqds/footer@7.0.3
 - @uqds/form@4.0.2
 - @uqds/grid-menu@4.0.2
 - @uqds/header@7.0.3
 - @uqds/header-legacy@4.0.2
 - @uqds/icon@4.0.2
 - @uqds/loading-spinner@4.0.2
 - @uqds/navigation@7.0.3
 - @uqds/previous-next@4.0.2
 - @uqds/react@2.0.3
 - @uqds/side-nav@4.0.2
 - @uqds/site-header@7.0.2
 - storybook-email@1.0.2
 - storybook-html@8.0.4
 - storybook-react@2.0.3
 - uqds-builder@4.0.5

--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "4.0.2-alpha.0",
+  "version": "4.0.2",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.2-alpha.0",
+    "@uqds/icon": "^4.0.2",
     "@uqds/layout": "^7.0.0"
   }
 }
