--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/icon",
-  "version": "4.0.2-alpha.0",
+  "version": "4.0.2",
   "description": "Icon component",
   "keywords": [
     "uqds",
