--- a/packages/loading-spinner/package.json
+++ b/packages/loading-spinner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/loading-spinner",
-  "version": "4.0.2-alpha.0",
+  "version": "4.0.2",
   "description": "Loading spinner component",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
   },
   "dependencies": {
     "@uqds/core": "^5.0.0",
-    "@uqds/icon": "^4.0.2-alpha.0"
+    "@uqds/icon": "^4.0.2"
   }
 }
