--- a/packages/site-header/package.json
+++ b/packages/site-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/site-header",
-  "version": "7.0.2-alpha.0",
+  "version": "7.0.2",
   "description": "Site header (title, utility area, and navigation)",
   "keywords": [
     "uqds",
@@ -42,7 +42,7 @@
   "dependencies": {
     "@uqds/core": "^5.0.0",
     "@uqds/grid": "^4.0.0",
-    "@uqds/icon": "^4.0.2-alpha.0"
+    "@uqds/icon": "^4.0.2"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
