--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uqds/profile",
+  "name": "@uqds/avatar",
   "version": "1.0.0",
-  "description": "The profile component package",
+  "description": "The avatar component package",
   "keywords": [
     "uqds",
     "uq",
@@ -10,7 +10,7 @@
     "scss",
     "sass",
     "css",
-    "profile"
+    "avatar"
   ],
   "publishConfig": {
     "access": "public"
@@ -44,7 +44,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^5.0.0",
-    "@uqds/avatar": "^1.0.0"
+    "@uqds/core": "^5.0.0"
   }
 }
