--- a/.github/workflows/version-dry-run.yml
+++ b/.github/workflows/version-dry-run.yml
@@ -42,7 +42,7 @@ jobs:
             COMMAND="npx lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push"
           else
             echo "Running dry run for an ALPHA release (targeting 'master')."
-            COMMAND="npx lerna version --conventional-commits --conventional-prerelease --dist-tag alpha --yes --no-git-tag-version --no-push"
+            COMMAND="npx lerna version --conventional-commits --conventional-prerelease --yes --no-git-tag-version --no-push"
           fi
 
           # Execute the command, capturing output and exit code.
