--- a/.github/workflows/version-dry-run.yml
+++ b/.github/workflows/version-dry-run.yml
@@ -41,10 +41,10 @@ jobs:
           # Prepare the appropriate Lerna command based on the PR's target branch
           if [[ "${{ github.base_ref }}" == "releases" ]]; then
             echo "Running dry run for a STABLE release (targeting 'releases')."
-            COMMAND="npx lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push --allow-branch '*'"
+            COMMAND="npx lerna version  --allow-branch '*' --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push"
           else
             echo "Running dry run for an ALPHA release (targeting 'master')."
-            COMMAND="npx lerna version --conventional-commits --conventional-prerelease --yes --no-git-tag-version --no-push --allow-branch '*'"
+            COMMAND="npx lerna version  --allow-branch '*' --conventional-commits --conventional-prerelease --yes --no-git-tag-version --no-push "
           fi
 
           # Execute the command, capturing output and exit code.
@@ -66,6 +66,15 @@ jobs:
             echo "$VERSION_OUTPUT"
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
+
+      - name: "🔍 Find existing Lerna dry run comment"
+        id: find_comment
+        uses: peter-evans/find-comment@v3
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: '### 🤖 Lerna Version Dry Run 🤖'
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "✍️ Post dry run results as PR comment"
         uses: peter-evans/create-or-update-comment@v4
