--- a/.github/workflows/version-dry-run.yml
+++ b/.github/workflows/version-dry-run.yml
@@ -41,10 +41,10 @@ jobs:
           # Prepare the appropriate Lerna command based on the PR's target branch
           if [[ "${{ github.base_ref }}" == "releases" ]]; then
             echo "Running dry run for a STABLE release (targeting 'releases')."
-            COMMAND="npx lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push"
+            COMMAND="npx lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push --allow-branch Version-Dry-Run"
           else
             echo "Running dry run for an ALPHA release (targeting 'master')."
-            COMMAND="npx lerna version --conventional-commits --conventional-prerelease --yes --no-git-tag-version --no-push"
+            COMMAND="npx lerna version --conventional-commits --conventional-prerelease --yes --no-git-tag-version --no-push --allow-branch Version-Dry-Run"
           fi
 
           # Execute the command, capturing output and exit code.
