--- a/.github/workflows/version-dry-run.yml
+++ b/.github/workflows/version-dry-run.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           # Configure git user, as Lerna may need it
           git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor}}@users.noreply.github.com"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
 
           # Dynamically get the branch name from the pull request's head ref
           BRANCH_NAME=$(echo ${{ github.head_ref }} | sed 's|refs/heads/||g')
@@ -61,8 +61,7 @@ jobs:
           # Check for the specific "no changes" message and exit code 0
           if [[ $LERNA_EXIT_CODE -eq 0 && "$VERSION_OUTPUT" == *"No changed packages to version"* ]]; then
           # If no changes are found, use the original friendly message.
-          VERSION_OUTPUT="✅ Lerna found no changes to version. This is expected if there are no new
-          'fix:', 'feat:', or 'BREAKING CHANGE:' commits."
+          VERSION_OUTPUT="✅ Lerna found no changes to version. This is expected if there are no new 'fix:', 'feat:', or 'BREAKING CHANGE:' commits."
           elif [[ $LERNA_EXIT_CODE -ne 0 ]]; then
           # If an error occurred, use the raw output for debugging.
           VERSION_OUTPUT="Lerna failed with an unexpected error. Exit code: $LERNA_EXIT_CODE\n$VERSION_OUTPUT"
