--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -38,6 +38,7 @@
     "@storybook/theming": "^8.4.2",
     "@uqds/accordion": "^7.0.2",
     "@uqds/acknowledgement": "^0.1.1",
+    "@uqds/avatar": "^1.0.0",
     "@uqds/alert": "^7.0.3",
     "@uqds/app-maps": "^4.0.0",
     "@uqds/blockquote": "^6.0.0",
@@ -65,6 +66,7 @@
     "@uqds/pane": "^4.0.0",
     "@uqds/pill": "^6.0.0",
     "@uqds/previous-next": "^4.0.2",
+    "@uqds/profile": "^1.0.0",
     "@uqds/progression": "^4.0.0",
     "@uqds/sections": "^4.0.1",
     "@uqds/side-nav": "^4.0.2",
