chore(release):Publish
 - @uqds/avatar@1.0.1-alpha.0
 - @uqds/profile@1.0.1-alpha.0
 - storybook-html@8.0.5-alpha.0

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.0.4",
+  "version": "8.0.5-alpha.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -38,9 +38,9 @@
     "@storybook/theming": "^8.4.2",
     "@uqds/accordion": "^7.0.2",
     "@uqds/acknowledgement": "^0.1.1",
-    "@uqds/avatar": "^1.0.0",
     "@uqds/alert": "^7.0.3",
     "@uqds/app-maps": "^4.0.0",
+    "@uqds/avatar": "^1.0.1-alpha.0",
     "@uqds/blockquote": "^6.0.0",
     "@uqds/body": "^4.0.0",
     "@uqds/breadcrumb": "^8.0.3",
@@ -66,7 +66,7 @@
     "@uqds/pane": "^4.0.0",
     "@uqds/pill": "^6.0.0",
     "@uqds/previous-next": "^4.0.2",
-    "@uqds/profile": "^1.0.0",
+    "@uqds/profile": "^1.0.1-alpha.0",
     "@uqds/progression": "^4.0.0",
     "@uqds/sections": "^4.0.1",
     "@uqds/side-nav": "^4.0.2",
