--- a/packages/profile/package.json
+++ b/packages/profile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/profile",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "The profile component package",
   "keywords": [
     "uqds",
@@ -44,7 +44,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^5.0.0",
-    "@uqds/avatar": "^1.0.0"
+    "@uqds/avatar": "^1.0.1-alpha.0",
+    "@uqds/core": "^5.0.0"
   }
 }
