--- a/packages/acknowledgement/package.json
+++ b/packages/acknowledgement/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/uq-its-ss/design-system#readme",
   "license": "ISC",
+  "files": [
+    "src/*",
+    "dist/*"
+  ],
   "exports": {
     "./src/scss/*": "./src/scss/*"
   },
