--- a/packages/acknowledgement/package.json
+++ b/packages/acknowledgement/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/acknowledgement",
-  "version": "0.1.1",
+  "version": "0.1.2-alpha.0",
   "description": "Acknowledgement component",
   "keywords": [
     "uqds",
