--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer",
-  "version": "7.0.3",
+  "version": "7.0.4-alpha.0",
   "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@uqds/accordion": "^7.0.2",
-    "@uqds/acknowledgement": "^0.1.1",
+    "@uqds/acknowledgement": "^0.1.2-alpha.0",
     "@uqds/core": "^5.0.0",
     "@uqds/grid": "^4.0.0",
     "@uqds/icon": "^4.0.2"
