--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "7.0.3",
+  "version": "7.0.4-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
