--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "8.0.5-alpha.1",
+  "version": "8.0.5-alpha.2",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -38,7 +38,7 @@
     "@storybook/theming": "^8.4.2",
     "@uqds/accordion": "^7.0.2",
     "@uqds/acknowledgement": "^0.1.2-alpha.0",
-    "@uqds/alert": "^7.0.3",
+    "@uqds/alert": "^7.0.4-alpha.0",
     "@uqds/app-maps": "^4.0.0",
     "@uqds/avatar": "^1.0.1-alpha.0",
     "@uqds/blockquote": "^6.0.0",
