--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.6-alpha.0",
+  "version": "4.0.6-alpha.1",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -31,7 +31,7 @@
   "dependencies": {
     "@uqds/accordion": "^7.0.2",
     "@uqds/acknowledgement": "^0.1.2-alpha.0",
-    "@uqds/alert": "^7.0.3",
+    "@uqds/alert": "^7.0.4-alpha.0",
     "@uqds/blockquote": "^6.0.0",
     "@uqds/body": "^4.0.0",
     "@uqds/breadcrumb": "^8.0.3",
