chore(release):Publish
 - @uqds/acknowledgement@0.1.2
 - @uqds/alert@7.0.4
 - @uqds/avatar@1.0.1
 - @uqds/footer@7.0.4
 - @uqds/header@7.0.4
 - @uqds/profile@1.0.1
 - @uqds/site-header@7.0.3
 - storybook-html@8.0.5
 - uqds-builder@4.0.6

--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/avatar",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1",
   "description": "The avatar component package",
   "keywords": [
     "uqds",
