--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/alert",
-  "version": "7.0.4-alpha.0",
+  "version": "7.0.4",
   "description": "Alert component",
   "keywords": [
     "uqds",
