--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-react",
-  "version": "2.0.3",
+  "version": "2.1.0-alpha.0",
   "description": "Storybook for REACT instance for uqds component development",
   "private": true,
   "keywords": [],
@@ -22,11 +22,11 @@
   },
   "devDependencies": {
     "@storybook/addon-a11y": "9.1.16",
+    "@storybook/addon-docs": "9.1.16",
     "@storybook/addon-links": "9.1.16",
     "@storybook/react-vite": "9.1.16",
     "@vitejs/plugin-react": "^4.3.4",
     "storybook": "9.1.16",
-    "vite": "^6.0.11",
-    "@storybook/addon-docs": "9.1.16"
+    "vite": "^6.0.11"
   }
 }
