chore(release):Publish
 - @uqds/app-maps@4.0.1
 - @uqds/body@4.0.1
 - @uqds/react@2.0.4
 - storybook-email@1.1.0
 - storybook-html@8.1.0
 - storybook-react@2.1.0
 - uqds-builder@4.0.7

--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/app-maps",
-  "version": "4.0.1-alpha.0",
+  "version": "4.0.1",
   "description": "Application stylesheets for UQ Maps",
   "private": true,
   "keywords": [
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "@material/circular-progress": "^14.0.0",
-    "@uqds/body": "^4.0.1-alpha.0",
+    "@uqds/body": "^4.0.1",
     "@uqds/core": "^5.0.0"
   },
   "devDependencies": {
