--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-react",
-  "version": "2.1.0-alpha.1",
+  "version": "2.1.0",
   "description": "Storybook for REACT instance for uqds component development",
   "private": true,
   "keywords": [],
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@uqds/icon": "^4.0.2",
-    "@uqds/react": "^2.0.4-alpha.0"
+    "@uqds/react": "^2.0.4"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "9.1.16",
